force-app/main/default/objects/Elision_Campaign__c/Elision_Campaign__c.object-meta.xml
<CustomObject>
    <label>Elision Campaign</label>
    <nameField>
        <label>Elision Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elision Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>