force-app/main/default/objects/Elision_Campaign__c/fields/Campaign_Id_NWH__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id_NWH__c</fullName>
    <label>Campaign Id NWH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>