force-app/main/default/objects/Elision_Campaign__c/fields/Campaign_Id_WH__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id_WH__c</fullName>
    <label>Campaign Id WH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>