force-app/main/default/objects/Elision_Campaign__c/fields/CampaignId_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>CampaignId_FollowUp__c</fullName>
    <label>CampaignId FollowUp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>