force-app/main/default/objects/Elision_Campaign__c/fields/Elision_Campaign_Category__c.field-meta.xml
<CustomField>
    <fullName>Elision_Campaign_Category__c</fullName>
    <label>Elision Campaign Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecomm Reservation</fullName>
            </value>
            <value>
                <fullName>Ecomm TestDrive</fullName>
            </value>
            <value>
                <fullName>Ecomm PaymentFailed</fullName>
            </value>
            <value>
                <fullName>Superstore M2All - North</fullName>
            </value>
            <value>
                <fullName>Superstore M2All - West</fullName>
            </value>
            <value>
                <fullName>Superstore M2All - South</fullName>
            </value>
            <value>
                <fullName>General BUC - South</fullName>
            </value>
            <value>
                <fullName>General BUC - Others</fullName>
            </value>
            <value>
                <fullName>HI Procurement</fullName>
            </value>
            <value>
                <fullName>Inspection Report Download</fullName>
            </value>
            <value>
                <fullName>Thane Motors Superstore</fullName>
            </value>
            <value>
                <fullName>HI ICO eligible</fullName>
            </value>
            <value>
                <fullName>Microsite Kerala</fullName>
            </value>
            <value>
                <fullName>Microsite Non Kerala</fullName>
            </value>
            <value>
                <fullName>NCR Cluster - Microsite</fullName>
            </value>
            <value>
                <fullName>Kerala Cluster - Microsite</fullName>
            </value>
            <value>
                <fullName>Maharashtra Cluster - Microsite</fullName>
            </value>
            <value>
                <fullName>NCR Cluster</fullName>
            </value>
            <value>
                <fullName>Kerala Cluster</fullName>
            </value>
            <value>
                <fullName>Maharashtra Cluster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>