force-app/main/default/objects/Elision_Campaign__c/fields/Lead_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lead_Flag__c</fullName>
    <label>Lead Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PaymentPending</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>uc_testdrive</fullName>
            </value>
            <value>
                <fullName>PaymentFailed</fullName>
            </value>
            <value>
                <fullName>inspection report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>