force-app/main/default/objects/Elision_Campaign__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MFC - Chatbot</fullName>
            </value>
            <value>
                <fullName>Exotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>