force-app/main/default/objects/Elision_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Id_WH__c</columns>
    <columns>Campaign_Id_NWH__c</columns>
    <columns>CampaignId_FollowUp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>